Remove sort by date

--- a/source/www/index.html
+++ b/source/www/index.html
@@ -550,7 +550,7 @@ function getWindowWidth() {
 <input type='button' class='sortButton' id='Name' value='Name' style='margin:1px' disabled>
 <input type='button' class='sortButton' id='RepoName' value='Repository' style='margin:1px'>
 <input type='button' class='sortButton' id='Author' value='Author' style='margin:1px'>
-<input type='button' class='sortButton' id='Date' value='Date' style='margin:1px'>
+<!-- <input type='button' class='sortButton' id='Date' value='Date' style='margin:1px'> -->
 Sort Direction:
 <input type='button' class='dirButton' id='Up' value='Ascending' style='margin:1px' disabled>
 <input type='button' class='dirButton' id='Down' value='Descending' style='margin:1px'>
